--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 @import "tw-animate-css";
+/* @import "tailwindcss/typography"; */
 
 @custom-variant dark (&:is(.dark *));
 :root {
@@ -31,7 +32,7 @@
   --accent: oklch(0.97 0 0);
   --accent-foreground: oklch(0.205 0 0);
   --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.922 0 0);
+  --border: black;
   --input: oklch(0.922 0 0);
   --ring: oklch(0.708 0 0);
   --chart-1: oklch(0.646 0.222 41.116);
@@ -63,9 +64,9 @@
 }
 
 .dark {
-  --background: oklch(0.145 0 0);
+  --background: black;
   --foreground: oklch(0.985 0 0);
-  --card: oklch(0.205 0 0);
+  --card: black;
   --card-foreground: oklch(0.985 0 0);
   --popover: oklch(0.205 0 0);
   --popover-foreground: oklch(0.985 0 0);
@@ -78,7 +79,7 @@
   --accent: oklch(0.269 0 0);
   --accent-foreground: oklch(0.985 0 0);
   --destructive: oklch(0.704 0.191 22.216);
-  --border: oklch(1 0 0 / 10%);
+  --border: white;
   --input: oklch(1 0 0 / 15%);
   --ring: oklch(0.556 0 0);
   --chart-1: oklch(0.488 0.243 264.376);
@@ -141,4 +142,11 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+@font-face {
+  font-family: "Necto";
+  src: local("Necto-Mono"),
+    url("./assets/fonts/necto_mono/NectoMono/NectoMono-Regular.otf")
+      format("opentype");
 }
