--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -79,7 +79,7 @@
   --accent: oklch(0.269 0 0);
   --accent-foreground: oklch(0.985 0 0);
   --destructive: oklch(0.704 0.191 22.216);
-  --border: white;
+  --border: rgb(193, 193, 193);
   --input: oklch(1 0 0 / 15%);
   --ring: oklch(0.556 0 0);
   --chart-1: oklch(0.488 0.243 264.376);
@@ -149,4 +149,20 @@
   src: local("Necto-Mono"),
     url("./assets/fonts/necto_mono/NectoMono/NectoMono-Regular.otf")
       format("opentype");
+}
+
+#oneko {
+  z-index: 100;
+}
+
+@keyframes sleepingCat {
+  0%,
+  50% {
+    background-position: -64px 0;
+  }
+
+  50%,
+  100% {
+    background-position: -64px -32px;
+  }
 }
